force-app/main/default/objects/Recommendations__c/Recommendations__c.object-meta.xml
<CustomObject>
    <description>팬별 Next Best Action 추천</description>
    <label>Fan Recommendation</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fan Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>