force-app/main/default/objects/Recommendations__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Fan Recommendations</relationshipLabel>
    <relationshipName>Fan_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>