force-app/main/default/objects/Recommendations__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Next Best Action을 추천받는 팬(Person Account)을 참조</description>
    <inlineHelpText>Next Best Action을 추천받는 팬(Person Account)을 참조</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Recommendations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>