force-app/main/default/objects/Recommendations__c/fields/Personalized_Message__c.field-meta.xml
<CustomField>
    <fullName>Personalized_Message__c</fullName>
    <label>Personalized Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>