force-app/main/default/objects/Recommendations__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>팬의 현재 상태와 활동 데이터에 따라 제안된 다음 행동을 기록</description>
    <inlineHelpText>팬의 현재 상태와 활동 데이터에 따라 제안된 다음 행동을 기록</inlineHelpText>
    <label>Recommended Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Message</fullName>
            </value>
            <value>
                <fullName>First Ticket Campaign</fullName>
            </value>
            <value>
                <fullName>First Visit Guide</fullName>
            </value>
            <value>
                <fullName>First Merchandise Campaign</fullName>
            </value>
            <value>
                <fullName>Favorite Player Campaign</fullName>
            </value>
            <value>
                <fullName>Membership Campaign</fullName>
            </value>
            <value>
                <fullName>VIP Benefit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>