force-app/main/default/objects/Recommendations__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>추천 메시지가 실제로 발송된 일시를 기록</description>
    <inlineHelpText>이메일 발송 성공 시 자동으로 채워집니다</inlineHelpText>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>