force-app/main/default/objects/Recommendations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Recommended_Action__c</columns>
    <columns>NAME</columns>
    <columns>Fan__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>